--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -18,38 +18,42 @@
 <div class="assortment__items">
     <div class="tt-select">
         <div class="assortment-title">Город</div>
-        <select>
 
+        <select size="1">
             <option value="0">Москва</option>
             <option value="1">Санкт-Петербург</option>
             <option value="2">Екатеринбург</option>
             <option value="3">Ростов</option>
             <option value="4">Краснодар</option>
         </select>
+
     </div>
     <div class="tt-select">
         <div class="assortment-title">Район</div>
-        <select>
+
+        <select size="1">
             <option value="0">Балашиха</option>
             <option value="1">Мытищи</option>
             <option value="2">Ленина</option>
             <option value="3">Кремль</option>
             <option value="4">Красная площадь</option>
         </select>
+
     </div>
     <div class="tt-select">
         <div class="assortment-title">Станция метро</div>
-        <select>
+        <select size="1">
             <option value="0">Ленино</option>
             <option value="1">Динамо</option>
             <option value="2">Петушки</option>
             <option value="3">Пушкино</option>
             <option value="4">Китай-город</option>
         </select>
+
     </div>
     <div class="tt-select">
         <div class="assortment-title">Категория</div>
-        <select>
+        <select size="1">
             <option value="0">A</option>
             <option value="1">B</option>
             <option value="2">C</option>
@@ -87,50 +91,59 @@
     </div>
 
 </section>
-<hr>
+<hr class="line-margin">
 
 <section class="variants">
     <div class="variants__school-links">
-      <div class="variants__school-cities">
-          <div class="variants-school-link"><a href="#">Автошколы Москвы</a></div>
-          <div class="variants-school-link"><a href="#">Автошколы СПБ</a></div>
-          <div class="variants-school-link"><a href="#">Автошколы Саратов</a></div>
+      <div class="cities-wrap">
+          <div class="variants__school-cities">
+              <div class="variants-school-link"><a href="#">Автошколы Москвы</a></div>
+              <div class="variants-school-link"><a href="#">Автошколы СПБ</a></div>
+              <div class="variants-school-link"><a href="#">Автошколы Саратов</a></div>
+          </div>
       </div>
-    <div class="variants__school-categories">
-        <div class="variants-school-link"><a href="#">Автошколы категории А</a> </div>
-        <div class="variants-school-link"><a href="#">Автошколы категории B</a></div>
-        <div class="variants-school-link"><a href="#">Автошколы категории C</a> </div>
-    </div>
+  <div class="categories-wrap">
+      <div class="variants__school-categories">
+          <div class="variants-school-link"><a href="#">Автошколы категории А</a> </div>
+          <div class="variants-school-link"><a href="#">Автошколы категории B</a></div>
+          <div class="variants-school-link"><a href="#">Автошколы категории C</a> </div>
+      </div>
+  </div>
 
+    <div class="underground-wrap">
         <div class="variants__underground">
             <div class="variants-school-link"><a href="#">Автошколы Метро Шушары</a> </div>
             <div class="variants-school-link"><a href="#">Автошколы Метро Московский</a> </div>
             <div class="variants-school-link"><a href="">Автошколы Метро Клинский</a> </div>
         </div>
+    </div>
 
-        <div class="variants__region">
-            <div class="variants-school-link"><a href="#">Автошколы Балашиха</a> </div>
-            <div class="variants-school-link"><a href="#">Автошколы Шушары</a> </div>
-            <div class="variants-school-link"><a href="#">Автошколы Пионерская</a> </div>
-        </div>
+     <div class="region-wrap">
+         <div class="variants__region">
+             <div class="variants-school-link"><a href="#">Автошколы Балашиха</a> </div>
+             <div class="variants-school-link"><a href="#">Автошколы Шушары</a> </div>
+             <div class="variants-school-link"><a href="#">Автошколы Пионерская</a> </div>
+         </div>
+     </div>
     </div>
 </section>
-<hr>
 <footer>
-    <div class="footer-copyright">
-        ПроАвтошколы.Ру © 2022.
-    </div>
-    <div class="footer-info">
-        Вся информация на данном сайте носит исключительно ознакомительный характер и не
-        является публичной офертой.
-    </div>
-    <div class="footer-terms">
-       <a href="#"> Пользовательское соглашение</a>
-        <a href="#"> Политика конфиденциальности</a>
-    </div>
+   <div class="footer__wrapper">
+       <div class="footer-copyright">
+           ПроАвтошколы.Ру © 2022.
+       </div>
+       <div class="footer-info">
+           Вся информация на данном сайте носит исключительно ознакомительный характер и не
+           является публичной офертой.
+       </div>
+       <div class="footer-terms">
+           <a href="#"> Пользовательское соглашение</a>
+           <a href="#"> Политика конфиденциальности</a>
+       </div>
+   </div>
 </footer>
 
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
